Map visual rects of descendants under LayoutSVGHiddenContainer to the temporary root

BUG=722761
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
R=chrishtr@chromium.org

Review-Url: https://codereview.chromium.org/2883263003 .
Cr-Commit-Position: refs/heads/master@{#472551}

Former-commit-id: 0357ef87967c4633b4d6c39de8362ed03831ef90